# silver

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SYNTAX.md  a.ag  bs.ag  clippy.toml  update-bootstrap.sh
.github/workflows/: ci.yml  release.yml
.opencode/plans/: 2026-05-20-full-parser-expression-coverage.md
agc/: CMakeLists.txt  Cargo.toml  bb.ag  build.rs
agc/include/agc/: ast.hpp  ast_dump.hpp  codegen.hpp  comptime.hpp  config.hpp.in  diagnostics.hpp  driver.hpp  lexer.hpp  mangle.hpp  overloaded.hpp  parser.hpp  sema.hpp  token.hpp  type.hpp
agc/include/agc/backends/: codegen_js.hpp
agc/src/: ast_clone.cpp  ast_dump.cpp  ast_tree.rs  attributes.rs  codegen_registry.cpp  comptime.cpp  debug_info.rs  diagnostics.cpp  diagnostics.rs  driver.cpp  lexer.cpp  lexer.rs  lib.rs  lsp_main.rs  main.cpp  main.rs  module_artifact.rs  module_loader.rs  parser.cpp  profiler.rs  sema.cpp  symbol_table.rs  type.cpp
agc/src/backends/: codegen_csharp.cpp  codegen_js.cpp  codegen_llvm.cpp
agc/src/backends/llvm/: codegen_llvm.cpp  llvm_emitter.hpp  llvm_expr.cpp  llvm_stmt.cpp
agc/src/builtin_macros/: mod.rs
agc/src/codegen/: abi.rs  llvm_ir.rs  mod.rs
agc/src/parser/: ast.rs  error.rs  graph.rs  import_hook.rs  mod.rs  parser.cpp  parser_decl.cpp  parser_expr.cpp  parser_stmt.cpp  prt_parser.rs
agc/src/sema/: mangle.cpp  sema.cpp  sema_decl.cpp  sema_expr.cpp  sema_instantiate.cpp  sema_stmt.cpp  sema_type.cpp
agc/src/semantic/: analyzer.rs  comptime_cast_hook.rs  mod.rs  monomorph.rs  typeck.rs
agc/src/traits/: mod.rs
agc/src/types/: mod.rs
agc/tests/: CMakeLists.txt  codegen_tests.cpp  comptime_tests.cpp  parser_tests.cpp
agco/: Cargo.toml  build.rs
agco/src/: ast.rs  lexer.rs  lib.rs  main.rs
agco/src/codegen/: decl.rs  expr.rs  mod.rs  stmt.rs
agco/src/parser/: decl.rs  expr.rs  mod.rs  stmt.rs  tests.rs  ty.rs
agco/tests/: examples.rs
aglsp/: Cargo.toml
aglsp/src/: diagnostics.rs  format.rs  main.rs  util.rs
bootstrap/: bootstrap.py  generator.py  lang98.py  lexer.py  parser.py
bootstrap/include/silver/: io.ag  string.ag
bootstrap/include/silver/mem/: vec.ag
bootstrap/include/silver/std/: cffi.ag  display.ag  fmt.ag  io.ag  iter.ag  map.ag  mem.ag  optional.ag  slice.ag  string.ag
bootstrap/include/silver/std/gfx/: rlgl.ag
bootstrap/include/silver/std/mem/: alloc.ag  arena.ag  box.ag  drop.ag  memory.ag  rc.ag  vec.ag
bootstrap/include/silver/std/rt/: casts.ag  heap.ag  runtime.ag  type_info.ag  types.ag  value.ag
bootstrap/include/silver/std/sys/: entry.ag  errno.ag  linux.ag  result.ag  syscall.ag
bootstrap/include/std/: file.ag  math.ag  mem.ag  string.ag  vec.ag
bootstrap/lang98/: __init__.py  lang_types.py  lexer.py  parser.py  preprocess.py  tokenizer.py
bootstrap/lib/silver/: gfx.raylib.agm  gfx.rlgl.agm  io.agm  iter.agm  mem.agm  mem.alloc.agm  mem.drop.agm  mem.vec.agm  string.agm
bootstrap/lib/silver/std/: display.agm  fmt.agm  hash.agm  io.agm  iter.agm  map.agm  math.agm  mem.agm  ops.agm  optional.agm  string.agm  test.agm
bootstrap/lib/silver/std/mem/: alloc.agm  arena.agm  box.agm  drop.agm  memory.agm  rc.agm  vec.agm
bootstrap/lib/silver/std/net/: inet.agm  tcp.agm
bootstrap/silver/: __init__.py  ir_generator.py  lexer.py  parser.py  preprocess.py  silver_types.py  tokenizer.py
cmake/: README.md  SilverUtils.cmake
docs/: grammar.md  runtime-migration.md
examples/: CMakeLists.txt  README.md  alloc_test.ag  array_init.ag  associated_fn_values.ag  basic.ag  basic.l98  calculator.ag  casting.ag  complex_types.ag  comptime.ag  const_inference.ag  control_flow.ag  data.ag  data_types.ag  defer_cleanup.ag  error_demo_simple.ag  error_recovery.ag  error_recovery_demo.ag  file_handling.ag  file_io.ag  file_test.ag  fizzbuzz.ag  for_test.ag  generic_func_test.ag  generic_impl_test.ag  generic_struct_test.ag  gfx_raylib.ag  hello.ag  inference_test.ag  initializers.ag  io.ag  iterators.ag  libc_interop.ag  link_test.ag  macro_test.ag  macros.ag  math.ag  method_test.ag  missing_return.ag  (+19 more)
libag/: CMakeLists.txt
libag/include/libag/: libag.hpp  version.hpp.in
libag/include/std/: file.ag  io.ag  math.ag  optional.ag  string.ag  traits.ag  vec.ag
libag/src/: libag.cpp
libag/src/std/: io.cpp  mem.cpp
llvmlite_test_ground/: basic_function.py  structures.py
memory:/root/: memory_summary.md
plan/: runtime-migration.md
scripts/: create-linux-bundle.sh  embed_file.cmake  gen-syscall-wrappers.py  release-local.sh
silver_runtime/: Cargo.toml
silver_runtime/src/: lib.rs
silver_runtime/src/runtime/: casts.rs  error.rs  ffi.rs  heap.rs  methods.rs  mod.rs  object.rs  registry.rs  tests.rs  value.rs
silver_runtime/src/types/: cast.rs  error.rs  mod.rs  registry.rs  tests.rs  type_info.rs  value.rs
std/: args.ag  display.ag  fmt.ag  hash.ag  io.ag  io.l98  iter.ag  map.ag  math.ag  mem.ag  optional.ag  process.ag  slice.ag  string.ag  test.ag  time.ag
std/gfx/: raylib.ag
std/mem/: alloc.ag  arena.ag  box.ag  drop.ag  memory.ag  vec.ag
std/net/: dns.ag  inet.ag  socket.ag  tcp.ag
std/rt/: casts.ag  heap.ag  methods.ag  type_info.ag  types.ag  value.ag
std/sys/: entry.ag  errno.ag  linux.ag  result.ag  syscall.ag  syscall_args.json
testfiles/: error_bracket.l98
tests/: CMakeLists.txt  README.md  align_test.ag  alloc_validity_test.ag  array_field_index_test.ag  box_test.ag  builtin_mem_test.ag  cascade_drop_test.ag  defer_test.ag  enum_arity_error_test.ag  enum_match_mixed_test.ag  enum_match_payload_test.ag  enum_match_unit_test.ag  enum_mixed_test.ag  enum_multi_field_test.ag  enum_payload_test.ag  enum_size_test.ag  errno_test.ag  file_test.ag  fmt_test.ag  fn_ptr_field_test.ag  fn_ptr_test.ag  for_in_generic_test.ag  for_in_ptr_test.ag  for_in_vec_test.ag  io_test.ag  map_test.ag  mem_growth_watch.ag  mem_test.ag  memory_pentest.ag  memory_stress.ag  minimal_mem_test.ag  net_dns_test.ag  net_test.ag  net_udp_test.ag  optional_test.ag  process_test.ag  rc_test.ag  rt_casts_test.ag  rt_heap_test.ag  (+15 more)
(+12 files in other folders)
