[package]
name = "agc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap =  { version = "4.5.56", features = ["derive"] }
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
owo-colors = "4.1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
tower-lsp = { version = "0.19", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"], optional = true }
parking_lot = { version = "0.12", optional = true }

[features]
    lsp = ["tower-lsp", "tokio", "parking_lot"]

[[bin]]
name = "agc-lsp"
path = "src/lsp_main.rs"
required-features = ["lsp"]
