[package]
name = "agc"
version = "0.2.0"
edition = "2024"

[dependencies]
clap =  { version = "4.5.56", features = ["derive"] }
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
llvm-sys = { version = "221.0.1", features = ["prefer-dynamic"] }
owo-colors = "4.1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
parking_lot = "0.12"
rustc-hash = "2.1.3"
